Chimaf structure first commit

--- a/src/AppBundle/Resources/views/Base/base.html.twig
+++ b/src/AppBundle/Resources/views/Base/base.html.twig
@@ -4,14 +4,16 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-                <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+            <link rel="stylesheet" type="text/css" href="{{ asset('bundles/bmatznerfontawesome/css/font-awesome.min.css') }}" />
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
         {% block body %}
             {% block page_head %}
-
+                {% include('@App/Base/nav.html.twig') %}
             {% endblock %}
             <div class="container">
                 {% block page_content %}
