FEAT: Login and registration OK

--- a/src/AppBundle/Resources/views/Home/index.html.twig
+++ b/src/AppBundle/Resources/views/Home/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "@App/Base/base.html.twig" %}
 
 {% block page_content %}
-    {{ include('@User/Security/login_content.html.twig') }}
+    <h1>CHIMAF Services</h1>
 {% endblock page_content %}
