--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -1,10 +1,69 @@
-<div class="row">
-    <h1>CRéation de compte</h1>
-    <form action="{{ path('fos_user_registration_register') }}" method="POST" class="fos_user_registration_register">
-        {{ form_widget(form) }}
-        <div>
-            <input type="submit" value="{{ 'registration.submit'|trans({}, 'fos_user_bundle') }}" />
-        </div>
-    </form>
-</div>
+<div class="top-content">
+    <div class="inner-bg">
+        <div class="container">
 
+            <div class="row">
+                <div class="col-sm-6 col-sm-offset-3 form-box">
+                    <div class="form-top">
+                        <div class="form-top-left">
+                            <h3>Création de compte utilisateur</h3>
+                            <p>Veuillez entrer les informations de l'utilisateur</p>
+                        </div>
+                        <div class="form-top-right">
+                            <i class="fa fa-sign-in" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                    <div class="form-bottom">
+
+                        <form action="{{ path('fos_user_registration_register') }}" method="POST" class="fos_user_registration_register">
+
+                            <div class="form-group">
+                                {{ form_label(form.email) }}
+                                {{ form_widget(form.email) }}
+                                {{ form_errors(form.email) }}
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        {{ form_label(form.first_name) }}
+                                        {{ form_widget(form.first_name) }}
+                                        {{ form_errors(form.first_name) }}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{ form_label(form.last_name) }}
+                                        {{ form_widget(form.last_name) }}
+                                        {{ form_errors(form.last_name) }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        {{ form_label(form.phone) }}
+                                        {{ form_widget(form.phone) }}
+                                        {{ form_errors(form.phone) }}
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{ form_label(form.fax) }}
+                                        {{ form_widget(form.fax) }}
+                                        {{ form_errors(form.fax) }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                {{ form_label(form.language) }}
+                                {{ form_widget(form.language) }}
+                                {{ form_errors(form.language) }}
+                            </div>
+
+                            {{ form_widget(form.save) }}
+
+                            {{ form_widget(form._token) }}
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
