--- a/src/AppBundle/Resources/views/Base/nav.html.twig
+++ b/src/AppBundle/Resources/views/Base/nav.html.twig
@@ -6,27 +6,31 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a target="_blank" href="#" class="navbar-brand">My sApp.</a>
+            <a target="_blank" href="#" class="navbar-brand">MON LOGO ICI.</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Inicio</a></li>
-                <li class="active"><a href="http://bootsnipp.com/snippets/featured/nav-account-manager" target="_blank">Inspirado en este ejemplo</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">DropDown
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Link 2</a></li>
-                    </ul>
-                </li>
+                <li><a href="#"><i class="fa fa-home icon-white"></i> Home</a></li>
+                <li class="divider-vertical"></li>
+                <li class="active"><a href="#"><i class="fa fa-file icon-white"></i>Pages</a></li>
+                <li class="divider-vertical"></li>
+                <li><a href="#"><i class="fa fa-envelope icon-white"></i> Messages</a></li>
+                <li class="divider-vertical"></li>
+                <li><a href="#"><i class="fa fa-signal icon-white"></i> Stats</a></li>
+                <li class="divider-vertical"></li>
+                <li><a href="#"><i class="fa fa-lock icon-white"></i> Permissions</a></li>
+                <li class="divider-vertical"></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if is_granted("IS_AUTHENTICATED_FULLY") %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <span class="glyphicon glyphicon-user"></span> 
-                            <strong>{{ app.user.firstname }}</strong>
+                            <i class="fa {{ is_granted('ROLE_ADMIN') ? 'fa-user-secret text-success' : 'fa-user' }}"></i>
+                            <span class="text-bold">&nbsp;Bonjour,</span>
+                            <span class="text-color-black text-bold">{{ app.user.firstname }}</span>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <span class="text-primary text-bold"><i>:&nbsp;{{ app.user.getRole() }}</i></span>
+                            {% endif %}
                             <span class="glyphicon glyphicon-chevron-down"></span>
                         </a>
                         <ul class="dropdown-menu">
@@ -35,15 +39,21 @@
                                     <div class="row">
                                         <div class="col-lg-4">
                                             <p class="text-center">
-                                                <span class="glyphicon glyphicon-user icon-size"></span>
+                                                <i class="glyphicon glyphicon-user icon-size text-primary"></i>
                                             </p>
                                         </div>
                                         <div class="col-lg-8">
-                                            <p class="text-left"><strong>{{ app.user.firstname~' '~app.user.lastname }}</strong></p>
+                                            <p class="text-left text-primary"><strong>{{ app.user.firstname~' '~app.user.lastname }}</strong></p>
                                             <p class="text-left small">{{ app.user.email }}</p>
-                                            <p class="text-left">
-                                                <a href="#" class="btn btn-primary btn-block btn-sm">Tableau de bord</a>
-                                            </p>
+                                            {% if is_granted('ROLE_ADMIN') %}
+                                                <p class="text-left">
+                                                    <a href="{{ path('fos_user_registration_register') }}"
+                                                       class="btn btn-info btn-block btn-sm">
+                                                        <i class="fa fa-cogs"></i>
+                                                        Gérer les utilisateurs
+                                                    </a>
+                                                </p>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
