--- a/src/AppBundle/Resources/views/Base/base.html.twig
+++ b/src/AppBundle/Resources/views/Base/base.html.twig
@@ -4,9 +4,17 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/datatables.css') }}">
             <link rel="stylesheet" type="text/css" href="{{ asset('bundles/bmatznerfontawesome/css/font-awesome.min.css') }}" />
+        {% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('js/jquery.min.js') }}"></script>
+            <script src="{{ asset('js/bootstrap.js') }}"></script>
+            <script src="{{ asset('js/datatables.js') }}"></script>
+            <script src="{{ asset('bundles/sgdatatables/js/pipeline.js') }}"></script>
+            <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -15,17 +23,13 @@
             {% block page_head %}
                 {% include('@App/Base/nav.html.twig') %}
             {% endblock %}
-            <div class="container">
+            <div class="container-fluid">
                 {% block page_content %}
 
                 {% endblock %}
             </div>
             {% block page_foot %}
             {% endblock %}
-        {% endblock %}
-        {% block javascripts %}
-            <script src="{{ asset('js/jquery.min.js') }}"></script>
-            <script src="{{ asset('js/bootstrap.js') }}"></script>
         {% endblock %}
     </body>
 </html>
