--- a/src/AppBundle/Resources/public/css/custom.css
+++ b/src/AppBundle/Resources/public/css/custom.css
@@ -16,10 +16,15 @@ body{
 .margin-bottom-10 {
     margin-bottom: 10px;
 }
+.padding-10 {
+    padding: 10px;
+}
+.padding-5 {
+    padding: 5px;
+}
 
 .dataTables_wrapper {
-    background: #000;
-    opacity: 0.8;
+    background: #e7e7e7;
 }
 
 .dataTables_wrapper > table > tbody {
@@ -27,7 +32,7 @@ body{
     text-align: left;
 }
 .dataTables_wrapper > table > thead, .dataTables_length{
-    color: white;
+    color: #000;
 }
 .dataTables_length {
     padding: 5px;
