--- a/src/AppBundle/Resources/views/Base/base.html.twig
+++ b/src/AppBundle/Resources/views/Base/base.html.twig
@@ -24,6 +24,15 @@
                 {% include('@App/Base/nav.html.twig') %}
             {% endblock %}
             <div class="container-fluid">
+
+                {% for label, messages in app.flashes(['success', 'error']) %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ label }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+
                 {% block page_content %}
 
                 {% endblock %}
