--- a/src/UserBundle/Resources/views/Registration/email.txt.twig
+++ b/src/UserBundle/Resources/views/Registration/email.txt.twig
@@ -1,11 +1,11 @@
 {% block subject %}
 {% autoescape false %}
-{{ 'registration.email.subject'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}, 'FOSUserBundle') }}
+{{ 'registration.email.subject'|trans({'%login%': user.username, '%username%': user.fullName, '%password%': pwd, '%confirmationUrl%': confirmationUrl}, 'fos_user_bundle') }}
 {% endautoescape %}
 {% endblock %}
 {% block body_text %}
 {% autoescape false %}
-{{ 'registration.email.message'|trans({'%username%': user.username, '%confirmationUrl%': confirmationUrl}, 'FOSUserBundle') }}
+{{ 'registration.email.message'|trans({'%login%': user.username, '%username%': user.fullName, '%password%': pwd, '%confirmationUrl%': confirmationUrl}, 'fos_user_bundle') }}
 {% endautoescape %}
 {% endblock %}
 {% block body_html %}{% endblock %}
