--- a/src/AppBundle/Resources/views/Base/base.html.twig
+++ b/src/AppBundle/Resources/views/Base/base.html.twig
@@ -27,13 +27,29 @@
 
                 {% for label, messages in app.flashes(['success', 'error']) %}
                     {% for message in messages %}
-                        <div class="alert alert-{{ label }}">
+                        <div class="alert alert-{{ label }} alert-dismissable">
+                            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
                             {{ message }}
                         </div>
                     {% endfor %}
                 {% endfor %}
 
                 {% block page_content %}
+
+                    {% block form_crud %}
+                        <div class="bootstrap-iso">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-md-6 col-sm-6 col-xs-12">
+                                        {% block form_content %}
+                                            <h1>{{ form_title }}</h1><hr>
+
+                                        {% endblock %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endblock %}
 
                 {% endblock %}
             </div>
