--- a/src/AppBundle/Resources/views/Base/nav.html.twig
+++ b/src/AppBundle/Resources/views/Base/nav.html.twig
@@ -6,22 +6,29 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a target="_blank" href="#" class="navbar-brand">MON LOGO ICI.</a>
+            <a href="{{ path('chimaf_home') }}" class="navbar-brand">
+            <span class="text-primary"><i class="fa fa-globe">CHIMAF SARL</i></span>
+            </a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#"><i class="fa fa-home icon-white"></i> Home</a></li>
+                <li><a href="{{ path('chimaf_home') }}"><i class="fa fa-home icon-white"></i> Accueil</a></li>
                 <li class="divider-vertical"></li>
-                <li class="active"><a href="#"><i class="fa fa-file icon-white"></i>Pages</a></li>
-                <li class="divider-vertical"></li>
-                <li><a href="#"><i class="fa fa-envelope icon-white"></i> Messages</a></li>
-                <li class="divider-vertical"></li>
-                <li><a href="#"><i class="fa fa-signal icon-white"></i> Stats</a></li>
-                <li class="divider-vertical"></li>
-                <li><a href="#"><i class="fa fa-lock icon-white"></i> Permissions</a></li>
-                <li class="divider-vertical"></li>
+                <li>
+                    <a href="{{ path('categorie_all') }}">
+                        <i class="fa fa-table"></i> Nos Produits
+                    </a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="{{ path('cart_list') }}">
+                        <i class="fa fa-shopping-cart"></i> Votre panier
+                        {% if app.session.get('cart')|length > 0 %}
+                            <span class="badge" style="background: red;">{{ app.session.get('cart')|length }}</span>
+                        {% endif %}
+                    </a>
+                </li>
                 {% if is_granted("IS_AUTHENTICATED_FULLY") %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
