--- a/src/AppBundle/Resources/views/Produit/list.html.twig
+++ b/src/AppBundle/Resources/views/Produit/list.html.twig
@@ -8,10 +8,13 @@
 {% block page_content %}
 
     <div class="row">
-        <div class="col-md-12 text-left">
-            <h2>Liste des produits</h2>
-            <hr>
+        <h1 class="text-left title-text margin-left-10">
+            Liste des produits
+        </h1>
+        <hr>
         </div>
+    </div>
+    <div class="row" style="background: #99CDD8">
         <div class="col-md-12 margin-bottom-20">
             <a
                     class="btn btn-success"
