--- a/src/AppBundle/Resources/views/Categorie/categories_produits.html.twig
+++ b/src/AppBundle/Resources/views/Categorie/categories_produits.html.twig
@@ -8,10 +8,13 @@
 {% block page_content %}
 
     <div class="row">
-        <div class="col-sm-12 col-md-12">
-            <h1 class="text-left">Nos produits par catégories</h1>
-            <hr>
-        </div>
+        <h1 class="text-left title-text margin-left-10">
+            Nos produits par catégories
+        </h1>
+        <hr>
+    </div>
+
+    <div class="row">
         {% for categorie in  categories %}
             {% if categorie.hasProducts %}
                 <div class="col-sm-4 col-md-2">
