--- a/src/AppBundle/Resources/views/Produit/produits_par_categorie.html.twig
+++ b/src/AppBundle/Resources/views/Produit/produits_par_categorie.html.twig
@@ -7,21 +7,23 @@
 
 {% block page_content %}
 
-    <div class="row">
+    {{ form_start(form, {'action': path('cart_add', {'id': form.vars.value.id}), 'method': 'POST'}) }}
+        <div class="row">
+            <h1 class="text-left title-text margin-left-10">
+                Produits de la catégorie: {{ form.vars.value.nom }}
+                <span style="display: none">{{ form_widget(form.nom) }}</span>
+            </h1>
+            <hr>
+        </div>
 
-        <li>
-            {% for prod in app.session.get('cart') %}
-                id = {{ prod.id }}; qte = {{ prod.quantiteAchetee }}<br>
-            {% endfor %}
-        </li>
+        <div class="row">
+            <li>
+                {% for prod in app.session.get('cart') %}
+                    id = {{ prod.id }}; qte = {{ prod.quantiteAchetee }}<br>
+                {% endfor %}
+            </li>
 
-        {{ form_start(form, {'action': path('cart_add', {'id': form.vars.value.id}), 'method': 'POST'}) }}
             <div class="col-lg-12">
-                <h1 class="text-left text-bold">
-                    Produits de la catégorie: {{ form.vars.value.nom }}
-                    <span style="display: none">{{ form_widget(form.nom) }}</span>
-                </h1>
-                <hr>
                 <div class="row">
                     <div class="col-md-2 margin-bottom-10">
                         <a href="{{ path('categorie_all') }}" class="btn btn-default pull-left">
@@ -66,9 +68,9 @@
                     {% endfor %}
                 </div>
             </div>
+        </div>
 
-        {{ form_widget(form._token) }}
-        {{ form_end(form, {'render_rest': false }) }}
-    </div>
+    {{ form_widget(form._token) }}
+    {{ form_end(form, {'render_rest': false }) }}
 
 {% endblock  %}
