--- a/src/AppBundle/Resources/views/Base/base.html.twig
+++ b/src/AppBundle/Resources/views/Base/base.html.twig
@@ -55,19 +55,19 @@
             </div>
             {% block page_foot %}
 
-                <div class="navbar navbar-default navbar-fixed-bottom">
-                    <div class="container">
-                        <p class="navbar-text pull-left">Chimaf Services SARL &copy; 2017. All rights reserved
-                            <a href="http://tinyurl.com/tbvalid" target="_blank" >HTML 5 Validation</a>
-                        </p>
+                {#<div class="navbar navbar-default navbar-fixed-bottom">#}
+                    {#<div class="container">#}
+                        {#<p class="navbar-text pull-left">Chimaf Services SARL &copy; 2017. All rights reserved#}
+                            {#<a href="http://tinyurl.com/tbvalid" target="_blank" >HTML 5 Validation</a>#}
+                        {#</p>#}
 
-                        <div class="pull-right padding-10">
-                            <a href="#" class="margin-left-5"><i class="fa fa-2x fa-facebook"></i></a>
-                            <a href="#" class="margin-left-5"><i class="fa fa-2x fa-twitter"></i></a>
-                            <a href="#" class="margin-left-5"><i class="fa fa-2x fa-linkedin"></i></a>
-                            <a href="#" class="margin-left-5"><i class="fa fa-2x fa-github"></i></a>
-                        </div>
-                    </div>
+                        {#<div class="pull-right padding-10">#}
+                            {#<a href="#" class="margin-left-5"><i class="fa fa-2x fa-facebook"></i></a>#}
+                            {#<a href="#" class="margin-left-5"><i class="fa fa-2x fa-twitter"></i></a>#}
+                            {#<a href="#" class="margin-left-5"><i class="fa fa-2x fa-linkedin"></i></a>#}
+                            {#<a href="#" class="margin-left-5"><i class="fa fa-2x fa-github"></i></a>#}
+                        {#</div>#}
+                    {#</div>#}
                 </div>
             {% endblock %}
         {% endblock %}
