--- a/src/AppBundle/Resources/views/Facture/list.html.twig
+++ b/src/AppBundle/Resources/views/Facture/list.html.twig
@@ -2,28 +2,20 @@
 {% extends "@App/Base/base.html.twig" %}
 
 {% block title %}
-    {{ parent() ~ " " ~ 'Liste des produits' }}
+    {{ parent() ~ " " ~ 'Liste des factures' }}
 {% endblock title %}
 
 {% block page_content %}
 
     <div class="row">
         <h1 class="text-left title-text margin-left-10">
-            Liste des produits
+            Liste des factures
         </h1>
         <hr>
     </div>
     <div class="row">
-        <div class="col-md-12 margin-bottom-20">
-            <a
-                    class="btn btn-success"
-                    href="{{ path('produit_new') }}">
-                <i class="fa fa-plus"></i>&nbsp;Ajouter un produit
-            </a>
-        </div>
         <div class="col-md-12">
             {{ sg_datatables_render(datatable) }}
         </div>
     </div>
-
 {% endblock  %}
